--- a/tools-i18n/pom.xml
+++ b/tools-i18n/pom.xml
@@ -40,6 +40,10 @@
 		<version>2.4</version>
 		<classifier>jdk15</classifier>
 	</dependency>
-	
+	<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.11</version>
+		</dependency>
   </dependencies>
 </project>
