add test resources
Change-Id: Ifa94b2f19d6fdece30c48811f853da8b7e133f80

--- a/tools-i18n/src/main/resources/config.properties
+++ b/tools-i18n/src/main/resources/config.properties
@@ -1,7 +1,8 @@
-GIT_URL = C:\\GIT\\ECS-CC-NA-UI
+GIT_URL = C:\\Users\\hubenlv\\ECS-CC-NA-UI
 SHEET_METADATA_NAME = meta-data
 METADATA_FILE = metadata.json
 EXPORT_EXCEL_NAME = need-translated.xlsx
 DEFAULT_BRANCH = origin/development
 SHEET_STORAGE_NAME = STORAGE (ALL)
-TRANSLATED_SPREADSHEET = C:\\GIT\\tool-i18n\\Translated Samples.xlsx
+TRANSLATED_SPREADSHEET = D:\\Neo Storage\\i18n\\Translated Samples.xlsx
+METADATA_CREATE_BY=bhu@hp.com
