apply and export
Change-Id: Ieffd541d4d9dfdb11359895cbc2078b581169a62

--- a/tools-i18n/src/main/resources/config.na.properties
+++ b/tools-i18n/src/main/resources/config.na.properties
@@ -1,4 +1,5 @@
 en_us=en
+IGNORE_KEY_WRODS=neolib,lib, neoapp, model,neo, static, app, web,v\\d,i18n
 #	ENGLISH("US - ENGLISH", "en"), ENGLISH_UK("UK ENGLISH", "en_gb"), 
 #	//JAPANESE("JAPANESE", "ja"),// ITALIAN("ITALIAN", "it"),
 #	FRENCH("FRANCE - FRENCH", "fr"), GERMAN("GERMAN", "de"), SPANISH("SPANISH", "es");
