--- a/tools-i18n/src/main/resources/config.storage.properties
+++ b/tools-i18n/src/main/resources/config.storage.properties
@@ -1,11 +1,12 @@
-en_us=local_en.json
+en_us=locale_en
+IGNORE_KEY_WRODS=neolib,lib, neoapp, model,neo, static, app, web,v\\d,i18n
 #	ENGLISH("US - ENGLISH", "en"), ENGLISH_UK("UK ENGLISH", "en_gb"), 
 #	//JAPANESE("JAPANESE", "ja"),// ITALIAN("ITALIAN", "it"),
 #	FRENCH("FRANCE - FRENCH", "fr"), GERMAN("GERMAN", "de"), SPANISH("SPANISH", "es");
-local0=ENGLISH_UK,local_en_gb
-local1=FRANCE - FRENCH,local_fr
-local2=GERMAN,local_de
-local3=SPANISH,local_es
+local0=ENGLISH_UK,locale_en_gb
+local1=FRANCE - FRENCH,locale_fr
+local2=GERMAN,locale_de
+local3=SPANISH,locale_es
 GIT_URL = C:\\Users\\hubenlv\\ECS-CC-NA-UI
 EXPORT_EXCEL_NAME = need-translated.xlsx
 DEFAULT_BRANCH = origin/development
