added command,refacotred some code
Change-Id: Idc3e2f830cfdcbc5f5ae2399aa86501e5baaae00

--- a/tools-i18n/src/main/resources/config.na.properties
+++ b/tools-i18n/src/main/resources/config.na.properties
@@ -9,7 +9,7 @@ local2=GERMAN,de
 local3=SPANISH,es
 
 GIT_URL = C:\\Users\\fanhou\\git\\api4network-web
-DEFAULT_BRANCH = origin/v1.1-base
+DEFAULT_BRANCH = v1.1-base
 EXPORT_EXCEL_NAME = need-translated.xlsx
 TRANSLATED_SPREADSHEET = translated.xlsx
 METADATA_FILE = metadata.json
