--- a/tools-i18n/src/main/resources/config.na.properties
+++ b/tools-i18n/src/main/resources/config.na.properties
@@ -7,10 +7,11 @@ local0=ENGLISH_UK,en_gb
 local1=FRANCE - FRENCH,fr
 local2=GERMAN,de
 local3=SPANISH,es
+local4=Japanese,jap
 
 GIT_URL = C:\\Users\\fanhou\\git\\api4network-web
-DEFAULT_BRANCH = v1.1-base
+DEFAULT_BRANCH = master
 EXPORT_EXCEL_NAME = need-translated.xlsx
-TRANSLATED_SPREADSHEET = translated.xlsx
+TRANSLATED_SPREADSHEET = need-translated_v2.xlsx
 METADATA_FILE = metadata.json
 METADATA_CREATE_BY=hou-jun.fan@hp.com
