Change-Id: Ibeb16908a224931cc57a854c7c3462286cf80155

--- a/tools-i18n/src/main/resources/config.na.properties
+++ b/tools-i18n/src/main/resources/config.na.properties
@@ -7,11 +7,12 @@ local0=ENGLISH_UK,en_gb
 local1=FRANCE - FRENCH,fr
 local2=GERMAN,de
 local3=SPANISH,es
-local4=Japanese,jap
+local4=JAPANESE,ja
+local5=ITALIAN,it
 
 GIT_URL = C:\\Users\\fanhou\\git\\api4network-web
-DEFAULT_BRANCH = master
+DEFAULT_BRANCH = chef0627-base
 EXPORT_EXCEL_NAME = need-translated.xlsx
-TRANSLATED_SPREADSHEET = need-translated_v2.xlsx
-METADATA_FILE = metadata.json
+TRANSLATED_SPREADSHEET = translated.XLSX
+METADATA_FILE = i18n_metadata.json
 METADATA_CREATE_BY=hou-jun.fan@hp.com
