Change-Id: I1f396c040ff66367ac221b177053ccce6a817b0e

--- a/tools-i18n/src/main/resources/config.na.properties
+++ b/tools-i18n/src/main/resources/config.na.properties
@@ -11,8 +11,8 @@ local4=JAPANESE,ja
 local5=ITALIAN,it
 
 GIT_URL = C:\\Users\\fanhou\\git\\api4network-web
-DEFAULT_BRANCH = chef0627-base
+DEFAULT_BRANCH = chef0725-base
 EXPORT_EXCEL_NAME = need-translated.xlsx
-TRANSLATED_SPREADSHEET = translated.XLSX
+TRANSLATED_SPREADSHEET = translated.xlsx
 METADATA_FILE = i18n_metadata.json
 METADATA_CREATE_BY=hou-jun.fan@hp.com
